Closed
Bug 1354576
Opened 8 years ago
Closed 8 years ago
Allow to build NSPR on Solaris again
Categories
(Firefox Build System :: General, defect)
Tracking
(firefox55 fixed)
RESOLVED
FIXED
mozilla55
| Tracking | Status | |
|---|---|---|
| firefox55 | --- | fixed |
People
(Reporter: petr.sumbera, Assigned: petr.sumbera)
Details
Attachments
(1 file, 1 obsolete file)
|
1.76 KB,
patch
|
ted
:
review+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:52.0) Gecko/20100101 Firefox/52.0
Build ID: 20170323105023
Steps to reproduce:
NSPR build support for Solaris needs to be added.
| Assignee | ||
Comment 1•8 years ago
|
||
| Assignee | ||
Updated•8 years ago
|
Attachment #8855833 -
Flags: review?(ted)
| Assignee | ||
Updated•8 years ago
|
Attachment #8855833 -
Flags: review?(mh+mozilla)
Comment 2•8 years ago
|
||
Comment on attachment 8855833 [details] [diff] [review]
Bug1354576.patch
Review of attachment 8855833 [details] [diff] [review]:
-----------------------------------------------------------------
Leaving it to ted.
Attachment #8855833 -
Flags: review?(mh+mozilla)
| Assignee | ||
Comment 3•8 years ago
|
||
Added support for 64bits atomics (os_SunOS_x86_64.s).
Attachment #8855833 -
Attachment is obsolete: true
Attachment #8855833 -
Flags: review?(ted)
Attachment #8872547 -
Flags: review?(ted)
Updated•8 years ago
|
Attachment #8872547 -
Flags: review?(ted) → review+
| Assignee | ||
Updated•8 years ago
|
Keywords: checkin-needed
Updated•8 years ago
|
Assignee: nobody → petr.sumbera
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/2240d6e36324
Allow to build NSPR on Solaris again. r=ted
Keywords: checkin-needed
Comment 5•8 years ago
|
||
| bugherder | ||
Status: UNCONFIRMED → RESOLVED
Closed: 8 years ago
status-firefox55:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → Firefox 55
Updated•7 years ago
|
Component: Build Config → General
Product: Firefox → Firefox Build System
Updated•7 years ago
|
Target Milestone: Firefox 55 → mozilla55
You need to log in
before you can comment on or make changes to this bug.
Description
•