Bug 1354576 - Allow to build NSPR on Solaris again. r=ted